src/index.css
@import "@hammies/frontend/styles";
@import "@hammies/frontend/prose.css";
@import "@hammies/frontend/one-syntax.css";
@source "../../frontend/src";
@plugin "@tailwindcss/typography";

* {
  scrollbar-width: thin;
}

:root {
  --primary: oklch(0.54 0.27 259.29 / 0.7);
  --secondary: oklch(1 0 0 / 0.05);
}

:root:not(.dark) {
  --primary: oklch(0.54 0.27 259.29 / 0.7);
  --secondary: oklch(0 0 0 / 0.05);
}

.dark .bg-primary, .dark .bg-primary\! {
  --primary: oklch(0.54 0.27 259.29 / 0.7);
  --secondary: oklch(1 0 0 / 0.05);
}

.bg-primary, .bg-primary\! {
  --primary: oklch(0.54 0.27 259.29 / 0.7);
  --secondary: oklch(0 0 0 / 0.05);
}

